Added the last 5 open inventory slots

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -186,6 +186,27 @@ ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.JumpMRU=/All/Game/BOTP
 ContentBrowserTab1.JumpMRU=/All/Game
 ContentBrowserTab1.JumpMRU=/All/Game/StarterContent/Architecture
+AssetPropertyPicker.ThumbnailSize=2
+AssetPropertyPicker.CurrentViewType=0
+ContentBrowserDrawer.SourcesExpanded=True
+ContentBrowserDrawer.FavoritesAreaExpanded=False
+ContentBrowserDrawer.PathAreaExpanded=True
+ContentBrowserDrawer.CollectionAreaExpanded=False
+ContentBrowserDrawer.FavoritesSearchAreaExpanded=False
+ContentBrowserDrawer.PathSearchAreaExpanded=False
+ContentBrowserDrawer.CollectionSearchAreaExpanded=False
+ContentBrowserDrawer.VerticalSplitter.SlotSize0=0.150000006
+ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
+ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
+ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
+ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
+ContentBrowserDrawer.SelectedPaths=/Game/UI
+ContentBrowserDrawer.PluginFilters=
+ContentBrowserDrawer.Favorites.SelectedPaths=
+ContentBrowserDrawer.SelectedCollections=
+ContentBrowserDrawer.ExpandedCollections=
+ContentBrowserDrawer.ThumbnailSize=2
+ContentBrowserDrawer.CurrentViewType=1
 
 [EditorStartup]
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
@@ -194,6 +215,18 @@ LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 WorldPartitionRuntimeHashSet="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
+CanvasPanel="\"Object\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object\" \"Object.Render Transform.RenderTransform\" "
+TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
+TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
+SizeBox="\"Object\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object\" \"Object.Render Transform.RenderTransform\" "
+Button="\"Object\" \"Object.Render Transform.RenderTransform\" "
+Overlay="\"Object\" \"Object.Render Transform.RenderTransform\" "
+Border="\"Object\" \"Object.Render Transform.RenderTransform\" "
+Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -232,7 +265,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=382.000 Y=398.000
-WindowSize=X=1284.000 Y=724.000
+WindowSize=X=1286.000 Y=726.000
 InitiallyMaximized=True
 
 [Directories2]
@@ -1380,9 +1413,11 @@ Synth=False
 Uncategorized=False
 User Created=False
 Advanced=False
+Common=False
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
+WorldPartitionRuntimeHashSet=
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -1403,6 +1438,73 @@ WorldSettings.Nanite=True
 WorldSettings.Audio=True
 WorldSettings.Tick=True
 WorldSettings.Networking=True
+CanvasPanel.Behavior=True
+CanvasPanel.Accessibility=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Rendering=True
+CanvasPanel.Navigation=True
+CanvasPanel.Localization=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Rendering=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
+SizeBox.Layout=True
+SizeBox.Child Layout=True
+SizeBox.Accessibility=True
+SizeBox.Behavior=True
+SizeBox.Render Transform=True
+SizeBox.Performance=True
+SizeBox.Rendering=True
+SizeBox.Navigation=True
+SizeBox.Localization=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Accessibility=True
+Button.Behavior=True
+Button.Render Transform=True
+Button.Performance=True
+Button.Rendering=True
+Button.Navigation=True
+Button.Localization=True
+Button.Events=True
+Overlay.Layout=True
+Overlay.Behavior=True
+Overlay.Accessibility=True
+Overlay.Render Transform=True
+Overlay.Performance=True
+Overlay.Rendering=True
+Overlay.Navigation=True
+Overlay.Localization=True
+Border.Layout=True
+Border.Content=True
+Border.Appearance=True
+Border.Accessibility=True
+Border.Behavior=True
+Border.Render Transform=True
+Border.Performance=True
+Border.Rendering=True
+Border.Navigation=True
+Border.Localization=True
+Border.Events=True
+Image.Layout=True
+Image.Appearance=True
+Image.Accessibility=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Rendering=True
+Image.Navigation=True
+Image.Localization=True
+Image.Events=True
 
 [UMGEditor.Designer]
 bCommonResolutionSelected=False
@@ -1520,8 +1622,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -1549,4 +1651,12 @@ PerBlueprintSettings=()
 bIncludeCommentNodesInBookmarksTab=True
 bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
+
+[PluginBrowser]
+InstalledPlugins=WMFCodecs
+
+[DetailCategoriesAdvanced]
+Image.Accessibility=False
+Image.Behavior=False
+Border.Appearance=False
 
