Item mesh changes

--- a/Saved/Config/WindowsEditor/Game.ini
+++ b/Saved/Config/WindowsEditor/Game.ini
@@ -1,3 +1,6 @@
 [StartupActions]
 bAddPacks=False
 
+[/Script/DeveloperToolSettings.PlatformsMenuSettings]
+StagingDirectory=(Path="C:/Users/Terry/Documents/Unreal Projects/Executables")
+
