--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1690,6 +1690,12 @@ MovieSceneCapture.TimeStamp=2024.10.02-11.51.00
 MovieSceneCapture.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2024.10.02-11.51.00
 HierarchicalLODUtilities.LastCompileMethod=Unknown
+LauncherServices.TimeStamp=2024.10.02-11.51.00
+LauncherServices.LastCompileMethod=Unknown
+TurnkeyIO.TimeStamp=2024.10.02-11.51.01
+TurnkeyIO.LastCompileMethod=Unknown
+UATHelper.TimeStamp=2024.10.02-11.51.01
+UATHelper.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
