--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -497,12 +497,12 @@ FXSystemComponent="\"Object\" "
 CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=
-RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
@@ -560,7 +560,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=0.000 Y=0.000
-WindowSize=X=1702.667 Y=1062.667
+WindowSize=X=1702.667 Y=1014.667
 InitiallyMaximized=False
 
 [Directories2]
@@ -2946,36 +2946,36 @@ bConvertSceneUnit=False
 LastLogListing=MapCheck
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/InventoryBPs/UI/WBP_InventoryGrid_Widget
-MRUItem1=/Game/InventoryBPs/UI/MainMenuStuff/MainMenuLevel
-MRUItem2=/Game/UI/W_StarterBackPack
-MRUItem3=/Game/InventoryBPs/UI/WBP_Inventory_Widget
-MRUItem4=/Game/InventoryBPs/UI/WBP_Item_Widget
-MRUItem5=/Game/Items/Materials/surfacematerial12
-MRUItem6=/Game/Items/BP_Backpack
-MRUItem7=/Game/BOTP/Blueprints/BP_Water
-MRUItem8=/Game/BOTP/Blueprints/BP_Rifle
-MRUItem9=/Game/BOTP/Blueprints/BP_Potion
-MRUItem10=/Game/BOTP/Blueprints/BP_Pistol
-MRUItem11=/Game/BOTP/Blueprints/BP_Medkit
-MRUItem12=/Game/BOTP/Blueprints/BP_Knife
-MRUItem13=/Game/BOTP/Blueprints/BP_Key
-MRUItem14=/Game/BOTP/Blueprints/BP_Food
-MRUItem15=/Game/BOTP/Blueprints/BP_Bandage
-MRUItem16=/Game/BOTP/Blueprints/BP_Ammo
-MRUItem17=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem18=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem19=/Game/InventoryBPs/BP_InventoryComponent
-MRUItem20=/Game/BOTP/Blueprints/BP_ItemObjectBotp
-MRUItem21=/Game/BOTP/Blueprints/BP_BotPItem
-MRUItem22=/Game/InventoryBPs/Items/BP_Item
-MRUItem23=/Game/BOTP/Inventory/WBP_Item
-MRUItem24=/Game/BOTP/Inventory/WBP_InventoryGrid
-MRUItem25=/Game/BOTP/Art_Assets/Custom_Icons/Materials/MAT_WaterIcon_R
-MRUItem26=/Game/BOTP/Art_Assets/Custom_Icons/Materials/MAT_RifleIcon_R
-MRUItem27=/Game/BOTP/Art_Assets/Custom_Icons/Materials/MAT_RifleIcon
-MRUItem28=/Game/BOTP/Art_Assets/Custom_Icons/Materials/MAT_PotionIcon_R
-MRUItem29=/Game/BOTP/Art_Assets/Custom_Icons/Materials/MAT_PistolIcon_R
+MRUItem0=/Game/InventoryBPs/UI/MainMenuStuff/W_MainMenu
+MRUItem1=/Game/InventoryBPs/UI/MainMenuStuff/GB_Mainmenu
+MRUItem2=/Game/InventoryBPs/UI/WBP_InventoryGrid_Widget
+MRUItem3=/Game/InventoryBPs/UI/MainMenuStuff/MainMenuLevel
+MRUItem4=/Game/UI/W_StarterBackPack
+MRUItem5=/Game/InventoryBPs/UI/WBP_Inventory_Widget
+MRUItem6=/Game/InventoryBPs/UI/WBP_Item_Widget
+MRUItem7=/Game/Items/Materials/surfacematerial12
+MRUItem8=/Game/Items/BP_Backpack
+MRUItem9=/Game/BOTP/Blueprints/BP_Water
+MRUItem10=/Game/BOTP/Blueprints/BP_Rifle
+MRUItem11=/Game/BOTP/Blueprints/BP_Potion
+MRUItem12=/Game/BOTP/Blueprints/BP_Pistol
+MRUItem13=/Game/BOTP/Blueprints/BP_Medkit
+MRUItem14=/Game/BOTP/Blueprints/BP_Knife
+MRUItem15=/Game/BOTP/Blueprints/BP_Key
+MRUItem16=/Game/BOTP/Blueprints/BP_Food
+MRUItem17=/Game/BOTP/Blueprints/BP_Bandage
+MRUItem18=/Game/BOTP/Blueprints/BP_Ammo
+MRUItem19=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem20=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem21=/Game/InventoryBPs/BP_InventoryComponent
+MRUItem22=/Game/BOTP/Blueprints/BP_ItemObjectBotp
+MRUItem23=/Game/BOTP/Blueprints/BP_BotPItem
+MRUItem24=/Game/InventoryBPs/Items/BP_Item
+MRUItem25=/Game/BOTP/Inventory/WBP_Item
+MRUItem26=/Game/BOTP/Inventory/WBP_InventoryGrid
+MRUItem27=/Game/BOTP/Art_Assets/Custom_Icons/Materials/MAT_WaterIcon_R
+MRUItem28=/Game/BOTP/Art_Assets/Custom_Icons/Materials/MAT_RifleIcon_R
+MRUItem29=/Game/BOTP/Art_Assets/Custom_Icons/Materials/MAT_RifleIcon
 
 [AssetEditorToolkitTabLocation]
 /Game/Items/Items_Pistol.Items_Pistol=1
@@ -3079,6 +3079,8 @@ MRUItem29=/Game/BOTP/Art_Assets/Custom_Icons/Materials/MAT_PistolIcon_R
 /Game/UI/MainMenuLevel.MainMenuLevel:PersistentLevel.MainMenuLevel=1
 None=======
 /Game/InventoryBPs/UI/WBP_Inventory_Widget.WBP_Inventory_Widget=1
+/Game/InventoryBPs/UI/MainMenuStuff/GB_Mainmenu.GB_Mainmenu=1
+/Game/InventoryBPs/UI/MainMenuStuff/W_MainMenu.W_MainMenu=1
 
 [MaterialEditor]
 PrimType=1
@@ -3284,8 +3286,8 @@ bDoubleClickNavigatesToParent=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=text
 TypePromotionPinDenyList=string
+TypePromotionPinDenyList=text
 BreakpointReloadMethod=RestoreAll
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
