increase sphere collision size on BPitems

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -298,7 +298,7 @@ AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
+LastLevel=/Game/InventoryBPs/UI/MainMenuStuff/MainMenuLevel
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeHashSet="\"Object\" "
@@ -556,15 +556,15 @@ WBP_Interact_C="\"Object\" \"Object.Layout.Slot\" "
 CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
@@ -586,6 +586,7 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=WidgetBlueprintEditor
 None=======
+OpenAssetsAtExit=/Game/InventoryBPs/Items/BP_Item.BP_Item
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -619,7 +620,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=0.000 Y=0.000
-WindowSize=X=1702.667 Y=1019.333
+WindowSize=X=1702.667 Y=1021.333
 InitiallyMaximized=True
 
 [Directories2]
@@ -3486,16 +3487,16 @@ bConvertSceneUnit=False
 LastLogListing=PIE
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem1=/Game/ThirdPerson/Input/IMC_Default
-MRUItem2=/Game/ThirdPerson/Input/Actions/IA_Interact
-MRUItem3=/Game/BOTP/Blueprints/WBP_Interact
-MRUItem4=/Game/InventoryBPs/Items/BP_Item
-MRUItem5=/Game/BOTP/Blueprints/BP_BotPItem
-MRUItem6=/Game/BOTP/Blueprints/BPI_Interact
-MRUItem7=/Game/InventoryBPs/UI/MainMenuStuff/W_MainMenu
-MRUItem8=/Game/UI/WBP_Controls
-MRUItem9=/Game/InventoryBPs/UI/MainMenuStuff/MainMenuLevel
+MRUItem0=/Game/InventoryBPs/Items/BP_Item
+MRUItem1=/Game/InventoryBPs/UI/MainMenuStuff/MainMenuLevel
+MRUItem2=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem3=/Game/ThirdPerson/Input/IMC_Default
+MRUItem4=/Game/ThirdPerson/Input/Actions/IA_Interact
+MRUItem5=/Game/BOTP/Blueprints/WBP_Interact
+MRUItem6=/Game/BOTP/Blueprints/BP_BotPItem
+MRUItem7=/Game/BOTP/Blueprints/BPI_Interact
+MRUItem8=/Game/InventoryBPs/UI/MainMenuStuff/W_MainMenu
+MRUItem9=/Game/UI/WBP_Controls
 MRUItem10=/Game/ThirdPerson/Maps/ThirdPersonMap
 MRUItem11=/Game/ThirdPerson/Maps/DisplayLevel
 MRUItem12=/Game/InventoryBPs/BP_InventoryComponent
@@ -3836,8 +3837,8 @@ bDoubleClickNavigatesToParent=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
@@ -3920,7 +3921,7 @@ Common=False
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
 WorldPartitionRuntimeHashSet=
-WorldPartitionRuntimeHashSet=
+WorldPartitionRuntimeHashSet=WorldSettings.WorldPartitionSetup.RuntimeHash
 None=======
 GeneralProjectSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierSmoothDelta,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
 CryptoKeysSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierSmoothDelta,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
